@@ -36,7 +36,8 @@ public          = yes       # advertise this stream?
 # there may be up to 8 of these sections, named [icecast2-0] ... [icecast2-7]
 # these can be mixed with [icecast-x] and [shoutcast-x] sections
 [icecast2-0]
-bitrate         = 96        # bitrate of the mp3 stream sent to the server
+format          = vorbis    # format of the stream: ogg vorbis
+bitrate         = 96        # bitrate of the stream sent to the server
 server          = yp.yourserver.com
                             # host name of the server
 port            = 8000      # port of the IceCast2 server, usually 8000
