@@ -159,6 +159,11 @@ The stream will be reachable at
 Required values:
 
 .TP
+.I format
+Format of the stream sent to the
+.B IceCast2
+server. Currently the only supported value here is 'vorbis'.
+.TP
 .I bitrate
 Bit rate to encode to in kBits / sec (e.g. 96)
 .TP
